# Copyright (c) 2006 Software Laboratory, SAMSUNG Electronics, Inc.
# All rights reserved.
#
# This software is the confidential and proprietary information of
# SAMSUNG Electronics, Inc. ("Confidential Information").
# You shall not disclose such Confidential Information and shall use it
# only in accordance with the terms of the license agreement you entered into
# with SAMSUNG Electronics.
#
# Orignal by Jin-mook Lim <jinmook.lim@samsung.com>
#            Bum-seok Lee <bumseok.lee@samsung.com>
# Created by Jaekyun Lee <jkyun.lee@samsung.com>
# Midefied by Jeechul jeon <heechul.jeon@samsung.com>

SUBDIRS = src
