plugin_LTLIBRARIES = libgstdrmdecryptor.la

libgstdrmdecryptor_la_SOURCES =	gstdrmdecryptor.c

libgstdrmdecryptor_la_CFLAGS = \
	$(GST_PLUGINS_BASE_CFLAGS) \
	$(GST_BASE_CFLAGS) $(GST_CFLAGS)
libgstdrmdecryptor_la_LIBADD = \
	$(GST_PLUGINS_BASE_LIBS) \
	$(GST_BASE_LIBS) \
	$(GST_LIBS)
libgstdrmdecryptor_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstdrmdecryptor_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)

noinst_HEADERS = gstdrmdecryptor.h

